--- a/src/public/index.html
+++ b/src/public/index.html
@@ -63,11 +63,7 @@
                             </div>
 
                             <div class="form-group">
-                                <input type="text" name="address_2" id="address_2" class="form-control input-sm" placeholder="Address 2" 
-                                    data-validation="length alphanumeric"
-                                    data-validation-length="min2"
-                                    data-validation-allowing=" -_#$&()"
-                                    data-validation-error-msg="Address 2, type at least 2 characters.">
+                                <input type="text" name="address_2" id="address_2" class="form-control input-sm" placeholder="Address 2" >
                             </div>
 
                             <div class="form-group">
